--- a/.env
+++ b/.env
@@ -1,2 +1,1 @@
-OPENAI_API_KEY=<<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
->>
+OPENAI_API_KEY=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
